# RadDB-rs

./: .gitignore  Cargo.toml  README.md
rad_db/: Cargo.toml
rad_db-algebra/: Cargo.toml
rad_db-algebra/src/: error.rs  lib.rs  relation_mapping.rs  wrapped_tuple.rs
rad_db-algebra/src/query/: conditions.rs  mod.rs  optimization.rs  query_iterator.rs  query_node.rs  query_result.rs
rad_db-derive/: Cargo.toml
rad_db-derive/src/: lib.rs
rad_db-structure/: Cargo.toml
rad_db-structure/DB_STORAGE/test/: block_2.txt  block_4.txt  block_5.txt
rad_db-structure/src/: identifier.rs  lib.rs  tuple.rs
rad_db-structure/src/key/: mod.rs  primary.rs
rad_db-structure/src/relations/: mod.rs  relation_struct.rs
rad_db-structure/src/relations/tuple_storage/: block.rs  extendible_hashing.rs  hash_map.rs  lock.rs  mod.rs
rad_db-types/: Cargo.toml
rad_db-types/src/: deserialization.rs  lib.rs  serialization.rs
src/types/: integer.rs  mod.rs
