[package]
name = "rad_db"
version = "0.1.0"
authors = ["Joshua Radin <jradin16@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "rad_db-types",
    "rad_db-structure",
    "rad_db-derive",
    "rad_db-algebra"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
