[package]
name = "rad_db-algebra"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rad_db-types = { path = "../rad_db-types"}
rad_db-structure = { path = "../rad_db-structure"}
