[package]
name = "rad_db-structure"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rad_db-types = { path = "../rad_db-types"}
memmap = "0.7.0"
num-bigint = "0.3.1"
num-traits = "0.2.14"
tokio = "0.3.6"
rayon = "1.5"
seahash = "4.0.1"