[package]
name = "rad_db-types"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rad_db-derive = { path="../rad_db-derive"}
regex = "1.4.2"